--- a/app/me/workouts/[id]/UserWorkout.module.scss
+++ b/app/me/workouts/[id]/UserWorkout.module.scss
@@ -13,7 +13,7 @@
         left: 35rem;
         background-color: hsl(240deg 4% 9.8%);
         
-         border-bottom: 1px solid var(--border-color);
+         border-bottom: 3px solid var(--border-color);
 
          @media (max-width: 1400px) {
             flex-wrap: wrap;
@@ -25,7 +25,9 @@
 
            
             video {
-                max-height: 100%;
+                height: 100%;
+                object-fit: cover;
+                aspect-ratio: 2 / 1;
             }
 
        }
@@ -122,35 +124,20 @@
             }
         }
 
+        form {
+            display: flex;
+            gap: 10px;
+            flex-direction: column;
+
+            textarea {
+                background-color: hsl(240deg 4% 9.8%);
+                height: 10rem;
+            }
+        }
+
         .navigation {
             margin-block-start: 3rem;
         }
-
-        .workoutNotesContainer {
-
-            .workoutNotes {
-                padding-left: 1rem;
-                margin-block-end: 2rem;
-            }
-
-            .workoutNotesForm {
-                margin-block: 1rem;
-            }
-            
-
-            .workoutNotesTextArea {
-                width: 100%;
-                height: 10rem;
-                background-color: hsl(240deg 4% 9.8%);
-                color: hsl(0deg 0% 100%);
-                // margin-inline-start: calc(-2rem);
-                // margin-inline-end: calc(-2rem);
-            }
-
-
-        }
-
-       
     }
 
     .exerciseName {
